protected routes and other sub validation helpers
